[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Cannabus.gd" type="Script" id=1]
[ext_resource path="res://objects/sideview.png" type="Texture" id=2]
[ext_resource path="res://objects/roue.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 1.00056 )

[sub_resource type="CapsuleShape" id=4]
radius = 1.37699
height = 13.7474

[sub_resource type="CapsuleShape" id=5]
radius = 1.142
height = 9.31345

[node name="Cannabus" type="KinematicBody" groups=["cbus"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.89086, 0 )
script = ExtResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -0.999999, 0, 0.0016928, 0, 1, 0, -0.0016928, 0, -0.999999, 0.895821, 1.51441, -0.150688 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Camera3" type="Camera" parent="."]
transform = Transform( 0.259758, -0.0730467, 0.962907, 0.0190253, 0.997329, 0.0705256, -0.965486, -1.79836e-09, 0.260454, 4.06197, 2.90346, 0.210598 )

[node name="Camera2" type="Camera" parent="."]
transform = Transform( 0.260454, 0, 0.965486, 0, 1, 0, -0.965486, 0, 0.260454, 14.8958, 3.51441, -3.15069 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0.0568905, 1.7572, -13.9933 )
current = true

[node name="wheel" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.53772, -1.35931, -0.516177 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="wheelR" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.02732, -1.35931, -0.516177 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -0.0472808, 0, 0.998882, 0, 1, 0, -0.998882, 0, -0.0472808, -0.0731287, -0.116291, 0.312709 )
shape = SubResource( 4 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( -0.0417187, 0, 0.999129, 0, 1, 0, -0.999129, 0, -0.0417187, -0.451574, 2.32383, 0.0856009 )
shape = SubResource( 5 )

[node name="FrontRay" type="RayCast" parent="."]
transform = Transform( -0.0472808, 0, 0.998882, 0, 1, 0, -0.998882, 0, -0.0472808, 6.48672, -1.797, -0.136015 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -2, 0 )
collide_with_areas = true

[node name="RearRay" type="RayCast" parent="."]
transform = Transform( -0.99553, 0, -0.0944559, 0, 1, 0, 0.0944559, 0, -0.99553, -4.02739, -1.53351, 0.45879 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -2, 0 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.498039, 0.164706, 0.164706, 1 )
debug_shape_thickness = 5
